:bug: fix: second launch slider withtout scroll-snap-align

--- a/assets/css/second-slider.css
+++ b/assets/css/second-slider.css
@@ -40,6 +40,7 @@
     border-radius: 10px;
     padding: 12px 8px;
     transition: all ease-in-out 0.5s;
+    scroll-snap-align: start;
 }
 
 @media (min-width: 820px){
